--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,3 +27,13 @@ input {
   width: 500px;
   outline: 0;
 }
+.arRead {
+  direction: rtl;
+  margin: 50px;
+}
+td {
+  border: 2px solid #aaa;
+}
+th {
+  border: 2px solid #555;
+}
